finish router call mcp server